Client/Style/style.css
/*@primaryblue: #64AFCB;
@lightgrey: #efefef;
@darkgrey: #d8d8d8;*/

/*App.js*/
container {
  flex: 1;
  justify-content: center;
  align-items: stretch;
  background-color: #efefef;
  margin-top: 22;
}

welcome {
  font-size: 20;
  text-align: center;
  margin: 10;
}


instructions {
  text-align: center;
  color: #333333;
  margin-bottom: 5;
}
/*App.js*/

/*HomeMap.js*/
searchBarContainer {
  padding: 0 5 0 5;
  margin: 0 15 0 15;
  align-items: stretch;
  flex-direction: row;
  flex: 1;
  position: absolute;
  z-index: 2;
  border-width: 2;
  border-radius: 15;
  border-color: #64AFCB;
  top: 15;
  background-color: white;
}

searchBar {
  flex: 1;
  height: 35;
  color: #64AFCB;
  padding-left: 10;
}

homeContainer {
  flex: 1;
  justify-content: center;
  align-items: stretch;
}

homeMapContainer {
  flex: 1;
  align-items: center;
  background-color: rgba(0,0,0,0);
  z-index: -1;
}

homeMapView {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

mapCenterMarkerView {
  flex: 1;
  justify-content: center;
  width: 0;
}

mapCenterMarker {
  width: 30;
  height: 40;
  background-color: rgba(0,0,0,0);
  right: 20;
  bottom: 20;
}

locationMarkerCallout {
  width: 175;
  z-index: 2;
}

redoSearchButton {
  width: 120;
  height: 40;
  border-radius: 35;
  border-color: #64AFCB;
  border-style: solid;
  border-width: 3;
  position: absolute;
  z-index: 4;
  background-color: #efefef;
  justify-content: center;
  align-items: center;
  bottom: 43;
  right: 130;
}

redoSearchButtonPress {
  width: 120;
  height: 40;
  border-radius: 35;
  border-color: #64AFCB;
  border-style: solid;
  border-width: 3;
  position: absolute;
  z-index: 4;
  background-color: #ffa500;
  justify-content: center;
  align-items: center;
  bottom: 43;
  right: 130;
}

addLocationButton {
  width: 70;
  height: 70;
  border-radius: 35;
  border-color: #64AFCB;
  border-style: solid;
  border-width: 3;
  position: absolute;
  z-index: 4;
  background-color: #efefef;
  justify-content: center;
  align-items: center;
  bottom: 40;
  right: 40;
}

addLocationButtonPress {
  width: 70;
  height: 70;
  border-radius: 35;
  border-color: #64AFCB;
  border-style: solid;
  border-width: 3;
  position: absolute;
  z-index: 4;
  background-color: #ffa500;
  justify-content: center;
  align-items: center;
  bottom: 40;
  right: 40;
}

addLocationButtonText {
  font-size: 45;
  font-weight: bold;
  color: #64AFCB;
  line-height: 47;
}
/*HomeMap.js*/

/*CreateLocation.js*/
createForm {
  background-color: #ffffff;
  height: 600;
}

createFormHeader {
  text-align: center;
  font-size: 20;
  height: 50;
  top: 30;
  color: orange;
  font-weight: bold;
}

addressContainerAdd {
  flex-direction: row;
  flex: .8;
  align-items: center;
  justify-content: center;
  border-bottom-width: 2;
  border-bottom-color: lightgray;
  margin-right: 10;
  margin-left: 10;
  padding-left: 10;
}

createFormAddress {
  flex:1;
  font-size: 14;
}

createBarContainer {
  margin: 0 15 30 15;
  flex: 2;
  top: 20;
  background-color: white;
  align-items: center;
}

createSpotBar {
  height: 150;
  color: #64AFCB;
  border-width: 2;
  border-radius: 10;
  border-color: #64AFCB;
  padding-left: 10;
  padding-top: 5;
  justify-content: flex-start;
  font-size: 16;
}

createPicBtnContainer {
  align-items: center;
  padding: 0 0 0 10;
  flex:.5;  
  flex-direction: row;
  background-color: white;
  border-bottom-width: 2;
  border-bottom-color: lightgray;
  margin-right: 10;
  margin-left: 10;
}
/*CreateLocation.js*/


/*ProfileView.js*/
profileViewImageButton {
  width: 50px;
  height: 50px;
  border-width: 2px;
  border-color: #64AFCB;
  border-radius: 25px;
  position: absolute;
  right: 15;
  top: 60;
  z-index: 2;
}

/*LoginPage.js*/
loginText {
  font-weight: bold;
  font-size: 50;
  text-align: center;
  color: orange;
  height: 90px;
  padding-bottom: 100px;
}

/*LoginPage.js*/
logo {
  width: 50;
  height: 50;
}

/*LocationListView*/
listViewContainer {
  padding: 25px 15px 15px 15px;
  align-items: center;
}

listViewToggleContainer {
  width: 70;
  height: 70;
  border-radius: 35;
  border-color: #64AFCB;
  border-width: 3;
  position: absolute;
  z-index: 4;
  background-color: #efefef;
  justify-content: center;
  align-items: center;
  bottom: 40;
  left: 40;
}

listViewToggleContainerPress {
  width: 70;
  height: 70;
  border-radius: 35;
  border-color: #64AFCB;
  border-width: 3;
  position: absolute;
  z-index: 4;
  background-color: #ffa500;
  justify-content: center;
  align-items: center;
  bottom: 40;
  left: 40;
}

listViewToggleText {
  font-size: 20;
  font-weight: bold;
  color: #64AFCB;
}

listViewCloseContainer {
  width: 200;
  height: 50;
  border-radius: 35;
  border-color: #64AFCB;
  border-width: 3;
  background-color: #efefef;
  justify-content: center;
  align-items: center;
  margin-top: 15;
}

listViewCloseContainerPress {
  width: 200;
  height: 50;
  border-radius: 35;
  border-color: #64AFCB;
  border-width: 3;
  background-color: #ffa500;
  justify-content: center;
  align-items: center;
  margin-top: 15;
}


reviewsButton {
  justify-content: center;
  align-items: center;
  width: 150;
  height: 40;
  border-radius: 35;
  border-color: #64AFCB;
  border-width: 3;
  background-color: #efefef;
  margin-top: 15;
}

reviewsButtonPress {
  justify-content: center;
  align-items: center;
  width: 150;
  height: 40;
  border-radius: 35;
  border-color: #64AFCB;
  border-width: 3;
  background-color: #ffa500;
  margin-top: 15;
}

reviewButtonText {
  font-size: 15;
  font-weight: bold;
  color: #64AFCB;
}

reviewButtonView {
  flex-direction: row;
  align-items: flex-end;
  justify-content: center;
}
/*LocationListView*/

/*LocationListItem*/
listItemView {
  padding: 5px 0px 5px 0px;
  border-top: 1px solid #64AFCB;
  flex-direction: row;
  align-items: center;
}

listItemText {
  width: 280;
  flex: 2;
}

listItemArrow {
  height: 20;
  align-items: center;
  flex: 1;
}
/*LocationListItem*/

/*Camera.js*/
cameraContainer {
  flex: 1;
  justify-content: center;
  align-items: center;
  background-color: transparent;
}

cameraButtonBar {
  flex-direction: row;
  position: absolute;
  bottom: 25;
  right: 0;
  left: 0;
  justify-content: center;
}

cameraButton {
  padding: 10;
  border-width: 1;
  border-color: #ffffff;
  margin: 5;
}
    
cameraButtonText {
  color: #ffffff;
}
/*Camera.js*/

/*profileView.js*/
profileViewButton {
  align-items: center;
  height:40;
  justify-content: center;
}

profileViewText {
  color: gray;
  font-size: 20;
  justify-content: flex-end;
}

parkingDetailsContainer {
  flex: 1;
  justify-content: center;
  align-items: stretch;
  background-color: white;
}

parkingDetailsMapContainer {
  flex: 1;
  justify-content: flex-start;
}

parkingDetailsAddress {
  margin-bottom: 10;
}

parkingDescriptionContainer {
  flex: 1;
  padding: 0 8 0 8;
}

parkingDescriptionText {
 /* font-size: 15px;*/
  font-family: Trebuchet MS;
  font-weight: normal;
  font-size: small;
  margin-top: 5;
}

parkingDescriptionImagesContainer {
  flex: 1;
  padding: 0 20 0 20;
}
/*ParkingDetails.js*/

/*LocationMarkerCallout.js*/
calloutContainer {
  flex-direction: row;
}

calloutDescription {
  flex: 4;
  margin: 0 15 0 15;
}

calloutParkingDetails {
  flex: 1;
  justify-content: center;
  /*padding-right: -20;*/
}

calloutFavorite {
  flex: 1;
  justify-content: center;
}


/*LocationMarkerCallout.js*/

/*NavButton.js*/
navButtonBack {
  width: 80;
  height: 30;
  border-radius: 8;
  border-color: #64AFCB;
  justify-content: flex-start;
  align-items: center;
}

navButton {
  width: 80;
  height: 30;
  border-radius: 8;
  border-color: #64AFCB;
  justify-content: center;
  align-items: center;
}

navButtonBackText {
  color: white;
  font-weight: bold;
  font-size: 16;
}

backArrow {
  height: 25;
  width:25;
}
/*NavButton.js*/

/*ReturnToUser.js*/
returnToUserButton {
  width: 50px;
  height: 50px;
  border-width: 2px;
  border-color: #64AFCB;
  border-radius: 25px;
  position: absolute;
  left: 15;
  top: 60;
  z-index: 2;
  background-color: #efefef;
}
/*ReturnToUser.js*/

